# rudn-year5-ros-waffleslam

./: Cargo.toml  Makefile  README.md  frames_2026-05-19_21.14.06.gv  map1.pgm  map1.yaml  report_task1.md  report_task2.md  task1.md  task2.md
.cargo/: config.toml
rviz/: main.rviz
src/basic_movement/: Cargo.toml  package.xml
src/basic_movement/src/: main.rs
src/main/: package.xml  setup.py
src/main/config/: nav2_params.yaml
src/main/launch/: astar.py  main.py  nav2.py  slam.py
src/main/models/turtlebot3_waffle/: model.sdf
src/nav_astar/: Cargo.toml  package.xml
src/nav_astar/.cargo/: config.toml
src/nav_astar/src/: main.rs
src/square_movement/: Cargo.toml  package.xml
src/square_movement/src/: main.rs
