<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_movement</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="danya@danya02.ru">danya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
