<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_astar</name>
  <version>0.0.1</version>
  <description>A* path planner over OccupancyGrid, implemented in Rust with rclrs.</description>
  <maintainer email="danya@danya02.ru">danya</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
