[package]
name = "square_movement"
version = "0.0.1"
authors = ["danya <danya@danya02.ru>"]
edition = "2021"

[[bin]]
name = "square_movement"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rclrs = "*"
geometry_msgs = "*"
nav_msgs = "*"
std_msgs = "*"
builtin_interfaces = "*"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"

# uncomment the following section in order to fill in
# further dependencies manually.
# <dependency> = "*" 
